--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Plus</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Calculadora</h1>
-    <input type="number">
-    <input type="number">
-    <button>somar</button>
-    <input readonly>
 
-    
+<body>
+
+    <div class="container">
+        <div class="calc">
+            <h1>Calculadora</h1>
+            <input type="number">
+            <input type="number">
+            <button>somar</button>
+            <input type="text" readonly>
+        </div>
+        <div class="history">
+          <h1>historico: </h1>
+
+        </div>
+
+    </div>
+
+
+
 </body>
+
 </html>
