--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="container">
         <div class="calc">
             <h1>Calculadora</h1>
-            <input type="number">
-            <input type="number">
-            <button>somar</button>
-            <input type="text" readonly>
+            <input id="num1" placeholder="Digite um numero" type="number">
+            <input id="num2" placeholder="Digite um numero" type="number">
+            <button onclick="calc()">somar</button>
+            <input id="result" type="text" readonly placeholder="0.0">
         </div>
         <div class="history">
           <h1>historico: </h1>
@@ -26,7 +26,7 @@
     </div>
 
 
-
+    <script src="script.js"></script>
 </body>
 
 </html>
