--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <h1>Calculadora</h1>
             <input id="num1" placeholder="Digite um numero" type="number">
             <input id="num2" placeholder="Digite um numero" type="number">
-            <button onclick="calc()">somar</button>
+            <div class="botoes">
+                <button onclick="calc('+')" id="somar">+</button>
+                <button onclick="calc('-')" id="sub">-</button>
+                <button onclick="calc('*')" id="mult">*</button>
+                <button onclick="calc('/')" id="dividir">/</button>
+            </div>
             <input id="result" type="text" readonly placeholder="0.0">
         </div>
         <div class="history">
