--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div class="container">
         <div class="calc">
+            <object data="calculate_icon.svg" type="image/svg+xml"></object>
             <h1>Calculadora</h1>
             <input id="num1" placeholder="Digite um numero" type="number">
             <input id="num2" placeholder="Digite um numero" type="number">
@@ -24,7 +25,7 @@
             <input id="result" type="text" readonly placeholder="0.0">
         </div>
         <div class="history">
-          <h1>historico: </h1>
+            <h1>historico: </h1>
 
         </div>
 
