--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
             </div>
             <input id="result" type="text" readonly placeholder="0.0">
         </div>
-        <div class="history">
+        <div>
             <h1>historico: </h1>
+            <div id="history" class="history">
 
+
+            </div>
         </div>
+
 
     </div>
 
