closes #2, closes #6 - finalizacao do projeto + estilizacao final

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
             </div>
             <input id="result" type="text" readonly placeholder="0.0">
         </div>
-        <div>
-            <h1>historico: </h1>
-            <div id="history" class="history">
+        <div class="history">
+            <div class="history-title">
+                <h1>Historico: </h1>
 
-
+            </div>
+            <div class="last-operation">
+                <small>10 últimas operações:</small>
+                <div id="history"></div>
             </div>
         </div>
 
